# personal-coach

./: compose.yml
.github/workflows/: ci.yml  docker-compose-check.yml  flake-check.yml
meal_service/: Cargo.toml  Dockerfile
meal_service/src/: main.rs
user_service/: Cargo.toml  Dockerfile  bacon.toml  flake.nix
user_service/src/: api.rs  log.rs  main.rs
user_service/src/api/: app.rs  create_user.rs  mod.rs
user_service/src/domain/: mod.rs  users.rs
user_service/src/infrastructure/: repository.rs
user_service/src/services/: users.rs
user_service/src/test_utils/: mod.rs  user_factory.rs
user_service/tests/: users.hurl
workout_service/: Cargo.toml  Dockerfile  flake.nix
workout_service/src/: main.rs
