[package]
name = "user_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.3"
rust_decimal = { version = "1.37.1", features = ["macros"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.2", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
http-body-util = "0.1.3"
serde_json = "1.0.140"
tower = { version = "0.5.2", features = ["util"] }
